# CudaSift

./: CMakeLists.txt
data/: limg_pts.pgm
include/cuda_sift/: cudaSift.h  cudaSiftH.h
include/cudasift/: cudaSift.h  cudaSiftH.h  sift_engine.hpp
src/: cudaImage.cu  cudaSiftHD.cu  mainSift.cpp  matching.cu  sift_engine.cpp
src/unused/: geomFuncs.cpp  mainSift.cpp
